--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     --tag-color: #171D1F;
     --font-family: "Prompt", sans-serif;
     --itens-background: #171D1F;
+    --verde-petroleo: #132E35;
 }
 
 * {
@@ -159,3 +160,71 @@ textarea {
     transform: translateY(-50%);
     margin-left: 8px;
 }
+
+.botao-publicar {
+    background-color: var(--primary-color);
+    color: var(--verde-petroleo);
+    border: none;
+    position: relative;
+}
+
+.botao-publicar::after {
+    content: "";
+    background-image: url('./img/arrow_forward2.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 8px;
+}
+
+.container-descricao {
+    width: 422px;
+}
+
+.main-imagem {
+    border-radius: 8px;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container-imagem {
+    height: 368px;
+    padding: 24px 16px;
+    background-color: var(--secondary-color);
+    border-radius: 8px;
+}
+
+.container-upload-imagem button {
+    margin: 16px 0 8px 0;
+    background-color: var(--itens-background);
+    border: 1px solid var(--secondary-color);
+    border-radius: 8px;
+    color: var(--secondary-color);
+    width: 100%;
+    text-align: center;
+    padding: 12px;
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 18px;
+    position: relative;
+}
+
+.container-upload-imagem button::after {
+    content: "";
+    background-image: url(./img/upload.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 8px;
+}
+
