--- a/styles.css
+++ b/styles.css
@@ -228,3 +228,9 @@ textarea {
     margin-left: 8px;
 }
 
+.container-imagem-nome {
+    display: flex;
+    gap: 8px;
+    color: var(--secondary-color);
+    font-size: 15px;
+}
